add js concept and make calls on weather api

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <div class="location">
         <h1 class="location-timezone">Timezone</h1>
-        <p>Icon</p>
+        <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
         <div class="degree-section">
             <h2 class="temperature-degree">34</h2> 
             <span>F</span>
         </div>
-        <div class="temperature-discription">Its too hot</div>
+        <div class="temperature-description">Its too hot</div>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/skycons.js"></script>
 </body>
 </html>
